--- a/Python/University Website/Version 1.0/templates/home.html
+++ b/Python/University Website/Version 1.0/templates/home.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
 <body>
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center" style="color:white">
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center" style="color:white" align="center">
         <div class="col-md-5 p-lg-5 mx-auto my-5">
             <ul id="logo">
              <li><img src="http://2013.igem.org/wiki/images/5/55/Hkust_logo.gif" width="auto" height="200" align="left"/></li>
@@ -16,7 +16,7 @@
             <br><br><br><br>
             <p class="lead font-weight-normal" style="color:#e6ac00">Welcome to KR University.</p>
             <p class="lead front-weight-normal" style="color:#e6ac00">Click on Get Started to view details.</p>
-            <a class="btn btn-primary" href="{{ url_for('details_page') }}">Get Started</a>
+            <a class="btn btn-primary" href="{{ url_for('login_page') }}">Get Started</a>
         </div>
         <div class="product-device box-shadow d-none d-md-block"></div>
         <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
@@ -27,7 +27,7 @@
     list-style:none;
     width:160px;
     height:100px;
-    margin:0;
+    margin:75px;
     padding:0;
     white-space:nowrap;
 
